--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Fitness">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="view-transition" content="same-origin" />
+
     <%= turbo_refreshes_with method: :morph, scroll: :preserve  %>
 
     <%= csrf_meta_tags %>
